Fix alignment when text wraps

--- a/apps/lite/ui/src/routes/project/$id/workspace/WorkspaceItemRow.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/WorkspaceItemRow.module.css
@@ -53,7 +53,6 @@
 	display: flex;
 	column-gap: 6px;
 	flex-grow: 1;
-	align-items: center;
 	min-width: 0;
 	padding-block: 6px;
 }
@@ -108,9 +107,9 @@
 	align-items: center;
 	justify-content: center;
 	min-width: 20px;
+	height: 16px;
 	padding-inline: 5px;
 	border-radius: 10px;
-	line-height: 16px;
 }
 
 .changesCountBubble {
